# Nand2Tetris

./: .gitignore  README.md
01/: And.hdl  And16.hdl  (+2 more)
jack-compiler/: CMakeLists.txt  CodeGenerationTest.sh  CompilationEngine.cc  CompilationEngine.h  CompilationEngineTest.cc  JackCompiler.cc  LexicalAnalyser.cc  LexicalAnalyser.h  LexicalAnalyserTest.cc  LexicalAnalyserTest.sh  Parser.cc  Parser.h  ParserTest.cc  README.md  SymbolTable.cc  SymbolTable.h  SymbolTableTest.cc  SynaxAnalysisTest.sh  SyntaxAnalysisTest.sh  VMWriter.cc  VMWriter.h  VMWriterTest.cc  scratch-notes.md
jack-compiler/code-gen-test-files/Average/: Main.vm.normalised
jack-compiler/code-gen-test-files/ComplexArrays/: Main.vm.expected.normalised
jack-compiler/code-gen-test-files/ConvertToBin/: Main.vm.normalised
jack-compiler/code-gen-test-files/Pong/: Ball.jack  Ball.vm.normalised  Bat.vm.expected.normalised  PongGame.vm.expected.normalised
jack-compiler/failure-tests/KeywordIdentifier/: Main.jack
jack-compiler/syntax-test-files/ArrayTest/: Main.vm.expected.normalised
jack-compiler/syntax-test-files/ExpressionLessSquare/: Main.vm.expected.normalised  Square.vm.expected  Square.vm.normalised  SquareGame.vm.expected  SquareGame.vm.expected.normalised
jack-compiler/syntax-test-files/HelloWorld/: MainT.xml
jack-compiler/syntax-test-files/Square/: Square.vm.expected.normalised  SquareGame.vm.normalised
jack-compiler/utils/: CMakeLists.txt  Colouriser.cc  Colouriser.h  JackSourceFileUtilities.cc  JackSourceFileUtilities.h  XMLOutput.cc  XMLOutput.h  XMLUtilities.cc  XMLUtilities.h
(+109 files in other folders)
